# kanata-ime-observer

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
src/: args.rs  error.rs  fcitx.rs  ibus.rs  kanata_tcp_types.rs  lib.rs  mac.rs  win.rs  win_onoff.rs
