[package]
name = "kanata_ime_observer"
version = "0.1.6"
edition = "2024"
default-run = "kanata_ime_observer"
license = "MIT"

[features]
fcitx = []
winonoff = []

[dependencies]
thiserror = "2"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
simple_logger = "5"
lexopt = "0.3.1"
once_cell = "1"
backon = { version = "1.6.0", default-features = false, features = [
    "std-blocking-sleep",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# zbus = "5.12.0"
dbus = "0.9.10"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Ime",
    "Win32_UI_Accessibility",
    "Win32_UI_Input",
    "Win32_Devices_HumanInterfaceDevice",
    "Win32_UI_Input_KeyboardAndMouse",
    # 以下はwin
    "Win32_System_Com",
    "Win32_UI_TextServices",
    "Win32_System_SystemServices",
    "Win32_Globalization",
] }
windows-core = "0.62.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
core-foundation-sys = "0.8.7"


[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "3.0.6"


[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
